Bug 1620508 - Revert change where opacity:0 makes subtrees invisible. r=Jamie a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D66296