accessible/generic/Accessible.cpp
@@ -301,10 +301,6 @@ uint64_t Accessible::VisibilityState() const {
     return states::INVISIBLE;
   }
 
-  if (frame->Style()->IsInOpacityZeroSubtree()) {
-    return states::INVISIBLE;
-  }
-
   if (!frame->StyleVisibility()->IsVisible()) return states::INVISIBLE;
 
   // It's invisible if the presshell is hidden by a visibility:hidden element in
